<resources>
    <string name="app_name">mobileMoney</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="password">PASSWORD (4 digits)</string>
    <string name="signup">REGISTER</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>


    <string name="login">Log In</string>
    <string name="link_to_register">Don\'t have an account? Sign up.</string>
    <string name="we_send_you_a_code_pin_to_this_phone">we send you a code pin to this Phone</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="enter_the_pin_code">enter the pin code</string>
    <string name="verfiy_pin_btn">verfiy pin</string>
    <string name="select_language">Click to Select your language</string>


</resources>